--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,10 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>HaloServlet</servlet-name>
-        <url-pattern>/halo</url-pattern>
+        
+        <!-- url tidak ada hubungan dengan struktur folder -->
+        <!-- tidak seperti php/asp -->
+        <url-pattern>/sub/folder/belajar/coba.php</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
